# ttPEAK

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  pch.hpp  ttpeak.cpp
ttpeak_kernels/compute/: dummy_unary_op.cpp  element_wise.cpp  matmul.cpp
ttpeak_kernels/movement/: generate_dummy.cpp  generate_dummy_interleaved.cpp  memset_sram.cpp  noc_reader.cpp  noc_writer.cpp  noop.cpp  read_kernel.cpp
